radeon: Default to leaving AGP transfer mode and fast writes unchanged.

Based on the assumption that firmware should have set up the card and host
bridge appropriately for these settings, this may actually be safer, at least
for the transfer rate; leaving fast writes enabled is hopefully safe as well,
it certainly is on my sytem.

See https://bugs.freedesktop.org/show_bug.cgi?id=9284 .